--- a/src/scss/components/_card-drug.scss
+++ b/src/scss/components/_card-drug.scss
@@ -1,16 +1,20 @@
 .card-drug {
-
-  max-width: 330px;
-  padding: 0 15px;
+  max-width: 374px;
+  width: 100%;
+  padding: 0 37px;
 
   &__header {
     text-align: center;
     margin-bottom: 18px;
 
-    svg {
+    .big {
       display: inline-block;
-      width: 155px;
-      height: auto;
+      font-size: 38px;
+      line-height: .6;
+
+      sup {
+        vertical-align: baseline;
+      }
     }
   }
 
@@ -20,8 +24,7 @@
     background: rgba(255, 255, 255, 0.15);
     padding-top: 100%;
     width: 300px;
-    height: 300px;
-    margin-bottom: 24px;
+    margin: 0 auto 24px;
 
 
     img {
@@ -31,11 +34,15 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      max-width: 90%;
-      height: 90%;
+      max-width: 100%;
+      height: 100%;
       object-fit: cover;
 
     }
+  }
+
+  &__footer {
+    text-align: center;
   }
 
   .wrap-btn {
@@ -61,9 +68,55 @@
       margin-bottom: 0;
     }
   }
+
+  @include respond-to($lg) {
+    padding: 0 15px;
+    &__img-wrap {
+      padding-top: 95%;
+    }
+  }
+  @include respond-to($sm) {
+
+    &__img-wrap {
+      width: 200px;
+      padding-top: 80%;
+    }
+    &__header {
+      .heading_h4 {
+        font-size: 18px;
+      }
+
+      .big {
+        font-size: 30px;
+      }
+    }
+  }
+
+  @include respond-to($xs) {
+    .wrap-btn {
+      right: -27px;
+    }
+  }
+  @include respond-to($xxs) {
+    &__img-wrap {
+        width: 143px;
+        padding-top: 50%;
+      margin-bottom: 20px;
+    }
+    &__header {
+      margin-bottom: 9px;
+      .heading_h4 {
+        font-size: 14px;
+      }
+
+      .big {
+        font-size: 24px;
+      }
+    }
+  }
 }
 
-.popover{
+.popover {
   background: #FFFFFF;
   max-width: 350px;
   min-height: 340px;
@@ -71,30 +124,37 @@
   font-size: 18px;
   color: $black-blue;
   padding: 27px 23px;
-  .heading_h1{
+
+  .heading_h1 {
     font-weight: 400;
     color: $green-100;
     line-height: 1;
     margin-bottom: 18px;
-    .small{
+
+    .small {
       font-size: 18px;
-      line-height:1;
+      line-height: 1;
       color: #aaaaaa;
     }
   }
-  &__info{
+
+  &__info {
     margin-bottom: 20px;
-    &:last-child{
+
+    &:last-child {
       margin-bottom: 0;
     }
   }
-  .prescription{
+
+  .prescription {
     display: flex;
     margin-bottom: 5px;
-    &:last-child{
+
+    &:last-child {
       margin-bottom: 0;
     }
-    &__icon{
+
+    &__icon {
       width: 24px;
       height: 24px;
       margin-right: 10px;
