--- a/src/scss/components/_card-drug.scss
+++ b/src/scss/components/_card-drug.scss
@@ -14,6 +14,7 @@
 
       sup {
         vertical-align: baseline;
+        margin-left: -0.35em;
       }
     }
   }
@@ -99,12 +100,13 @@
   }
   @include respond-to($xxs) {
     &__img-wrap {
-        width: 143px;
-        padding-top: 50%;
+      width: 143px;
+      padding-top: 50%;
       margin-bottom: 20px;
     }
     &__header {
       margin-bottom: 9px;
+
       .heading_h4 {
         font-size: 14px;
       }
