add resp section-slider

--- a/src/scss/layout/sections/selection-drug.scss
+++ b/src/scss/layout/sections/selection-drug.scss
@@ -40,6 +40,9 @@
   }
 
   @include respond-to($md) {
+    .bg-section{
+      padding-top: 0;
+    }
     .drugs-list {
       margin-bottom: 24px;
     }
