--- a/src/scss/components/_card-drug.scss
+++ b/src/scss/components/_card-drug.scss
@@ -121,6 +121,7 @@
 .popover {
   background: #FFFFFF;
   max-width: 350px;
+  width: 100%;
   min-height: 340px;
   border-radius: 15px;
   font-size: 18px;
