--- a/src/scss/components/_card-drug.scss
+++ b/src/scss/components/_card-drug.scss
@@ -26,20 +26,24 @@
     padding-top: 100%;
     width: 300px;
     margin: 0 auto 24px;
+    transition: box-shadow .35s;
 
-
-    img {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      max-width: 100%;
-      height: 100%;
-      object-fit: cover;
-
+    &:hover {
+      box-shadow: 0px 0px 25px 0px #BCE5FBBF;
     }
+  }
+
+  &__img {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+
   }
 
   &__footer {
@@ -53,13 +57,20 @@
     top: 50%;
     z-index: 1;
     transform: translateY(-50%);
+  }
 
-    &:hover {
-      .round:after {
-        transform: translate(-50%, -50%) rotate(0deg);
+  .trigger-popover {
+    opacity: 1;
+    transition: .35s;
+  }
 
-      }
-    }
+  .trigger-popover.active:after {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  .trigger-popover.hide {
+    opacity: 0;
+    pointer-events: none;
   }
 
   .btn {
@@ -119,14 +130,23 @@
 }
 
 .popover {
+  position: absolute;
   background: #FFFFFF;
-  max-width: 350px;
-  width: 100%;
   min-height: 340px;
   border-radius: 15px;
   font-size: 18px;
   color: $black-blue;
   padding: 27px 23px;
+  width: 340px;
+  opacity: 0;
+  transition: opacity .4s;
+  z-index: 100;
+  pointer-events: none;
+
+  &.active {
+    opacity: 1;
+    pointer-events: all;
+  }
 
   .heading_h1 {
     font-weight: 400;
